--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -1415,12 +1415,24 @@
 
     <div  id="results">
       <a href="heavy_vehicle_controls.html">Try again. Reload This Page</a>
+		<br> <br>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank">
+    <button>
+      🚦Get the exact January pdf Memo R100
+    </button>
+  </a>
     </div>
     <div  id="results2">
       <a href="test_code.html">Home Page</a>
     </div>
     <div  id="results3">
       <a href="heavy_vehicle_controls.html">Time Over. Reload This Page</a>
+		<br> <br>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank">
+    <button>
+      🚦Get the exact January pdf Memo R100
+    </button>
+  </a>
     </div>
     <div  id="results4">
 
@@ -1882,6 +1894,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
