--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -1417,7 +1417,7 @@
       <a href="heavy_vehicle_controls.html">Try again. Reload This Page</a>
 		<br> <br>
 	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank">
-    <button>
+    <button id="results4">
       🚦Get the exact January pdf Memo R100
     </button>
   </a>
@@ -1429,7 +1429,7 @@
       <a href="heavy_vehicle_controls.html">Time Over. Reload This Page</a>
 		<br> <br>
 	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank">
-    <button>
+    <button id="results4">
       🚦Get the exact January pdf Memo R100
     </button>
   </a>
@@ -1894,6 +1894,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
