--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -1415,19 +1415,28 @@
 
     <div  id="results">
       <a href="heavy_vehicle_controls.html">Try again. Reload This Page</a>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
+  </a>
     </div>
     <div  id="results2">
       <a href="test_code.html">Home Page</a>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
+  </a>
     </div>
     <div  id="results3">
       <a href="heavy_vehicle_controls.html">Time Over. Reload This Page</a>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
+  </a>
     </div>
     <div  id="results4">
 
       <a href="learn_heavyvehicle.html#p1" style="margin-right: 70px;"><button onclick="learn()">Learn</button></a>
       <a href="#"><button onclick="learn()">Skip</button></a> <br> <br>
-	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;" border-radius: 5px;>
-      🚦Get the exact January pdf Memo R100
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
   </a>
     </div>
 </body>
@@ -1879,6 +1888,24 @@ document.querySelectorAll(".niches").forEach(el => {
   const randomAdvice = nicheAdvices[Math.floor(Math.random() * nicheAdvices.length)];
   el.textContent = randomAdvice;
 });
+</script>
+
+<script>
+  // Array of month names
+  const months = [
+    "January", "February", "March", "April", "May", "June",
+    "July", "August", "September", "October", "November", "December"
+  ];
+
+  const today = new Date();
+  let monthIndex = today.getMonth(); // 0 = Jan, 1 = Feb, etc.
+
+  // If day is 25 or later, show next month
+  if (today.getDate() >= 25) {
+    monthIndex = (monthIndex + 1) % 12; // Wrap around after December
+  }
+
+  document.getElementById("month").textContent = months[monthIndex];
 </script>
 
 
