--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -1414,19 +1414,19 @@
     </div>
 
     <div  id="results">
-      <a href="heavy_vehicle_controls.html">Try again. Reload This Page</a>
+      <a href="heavy_vehicle_controls.html">Try again. Reload This Page</a><br> <br>
 	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
       🚦Get the exact <span id="month">January</span> pdf Memo R100
   </a>
     </div>
     <div  id="results2">
-      <a href="test_code.html">Home Page</a>
+      <a href="test_code.html">Home Page</a><br> <br>
 	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
       🚦Get the exact <span id="month">January</span> pdf Memo R100
   </a>
     </div>
     <div  id="results3">
-      <a href="heavy_vehicle_controls.html">Time Over. Reload This Page</a>
+      <a href="heavy_vehicle_controls.html">Time Over. Reload This Page</a><br> <br>
 	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
       🚦Get the exact <span id="month">January</span> pdf Memo R100
   </a>
@@ -1907,6 +1907,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
