--- a/K53_Controls_Test/motorcycle_controls.html
+++ b/K53_Controls_Test/motorcycle_controls.html
@@ -1412,17 +1412,29 @@
     </div>
 
     <div  id="results">
-      <a href="motorcycle_controls.html">Try again. Reload This Page</a>
+      <a href="motorcycle_controls.html">Try again. Reload This Page</a><br> <br>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
+  </a>
     </div>
     <div  id="results2">
-      <a href="test_code.html">Home Page</a>
+      <a href="test_code.html">Home Page</a><br> <br>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
+  </a>
     </div>
     <div  id="results3">
-      <a href="motorcycle_controls.html">Time Over. Reload This Page</a>
+      <a href="motorcycle_controls.html">Time Over. Reload This Page</a><br> <br>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
+  </a>
     </div>
     <div  id="results4">
       <a href="learn_motorcycle.html#p1" style="margin-right: 70px;"><button onclick="learn()">Learn</button></a>
-      <a href="#"><button onclick="learn()">Skip</button></a>
+      <a href="#"><button onclick="learn()">Skip</button></a><br> <br>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
+  </a>
     </div>
 </body>
 </html>
@@ -1877,6 +1889,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
