--- a/K53_Book_Test/booka_motorcycle_test.html
+++ b/K53_Book_Test/booka_motorcycle_test.html
@@ -5642,13 +5642,22 @@
     </div>
 
     <div  id="results">
-      <a href="booka_motorcycle_test.html">Try again. Reload This Page</a>
+      <a href="booka_motorcycle_test.html">Try again. Reload This Page</a><br> <br>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
+  </a>
     </div>
     <div  id="results2">
-      <a href="motorcycle_book_tests.html">Home Page</a>
+      <a href="motorcycle_book_tests.html">Home Page</a><br> <br>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
+  </a>
     </div>
     <div  id="results3">
-      <a href="booka_motorcycle_test.html">Time Over. Reload This Page</a>
+      <a href="booka_motorcycle_test.html">Time Over. Reload This Page</a><br> <br>
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
+      🚦Get the exact <span id="month">January</span> pdf Memo R100
+  </a>
     </div>
 </body>
 </html>
@@ -6073,6 +6082,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
