--- a/K53_Rules_Test/road_rules_test6.html
+++ b/K53_Rules_Test/road_rules_test6.html
@@ -3082,6 +3082,24 @@ document.querySelectorAll(".niches").forEach(el => {
 });
 </script>
 
+<script>
+  // Array of month names
+  const months = [
+    "January", "February", "March", "April", "May", "June",
+    "July", "August", "September", "October", "November", "December"
+  ];
+
+  const today = new Date();
+  let monthIndex = today.getMonth(); // 0 = Jan, 1 = Feb, etc.
+
+  // If day is 25 or later, show next month
+  if (today.getDate() >= 25) {
+    monthIndex = (monthIndex + 1) % 12; // Wrap around after December
+  }
+
+  document.getElementById("month").textContent = months[monthIndex];
+</script>
+
 
 
 
