--- a/K53_Sign_Test/road_sign_test1.html
+++ b/K53_Sign_Test/road_sign_test1.html
@@ -2896,6 +2896,7 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+	  localStorage.setItem("score", score);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3245,6 +3246,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
