--- a/K53_Sign_Test/road_sign_tests.html
+++ b/K53_Sign_Test/road_sign_tests.html
@@ -245,7 +245,14 @@
  		lastScrollTop = scrollTop;
  	})
 
+
+	  const score = localStorage.getItem("score") || 0;
+	  if (score > 0){
+		  document.getElementById("0").style.borderColor = "green";
+	  }
+	  
  </script>
+
 
 
 
