--- a/K53_Sign_Test/road_sign_test2.html
+++ b/K53_Sign_Test/road_sign_test2.html
@@ -2904,6 +2904,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+			var signs_test2 = score; 
+		localStorage.setItem("signs_test2", signs_test2);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3253,6 +3255,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
