--- a/K53_Sign_Test/road_sign_test3.html
+++ b/K53_Sign_Test/road_sign_test3.html
@@ -2904,6 +2904,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+			var signs_test3 = score; 
+		localStorage.setItem("signs_test3", signs_test3);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3254,6 +3256,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
