--- a/K53_Sign_Test/road_sign_test5.html
+++ b/K53_Sign_Test/road_sign_test5.html
@@ -2902,6 +2902,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+			var signs_test5 = score; 
+		localStorage.setItem("signs_test5", signs_test5);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3255,6 +3257,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
