--- a/K53_Sign_Test/road_sign_test6.html
+++ b/K53_Sign_Test/road_sign_test6.html
@@ -2904,6 +2904,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+			var signs_test6 = score; 
+		localStorage.setItem("signs_test6", signs_test6);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3252,6 +3254,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
