--- a/K53_Sign_Test/road_sign_test8.html
+++ b/K53_Sign_Test/road_sign_test8.html
@@ -2899,6 +2899,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+			var signs_test8 = score; 
+		localStorage.setItem("signs_test8", signs_test8);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3251,6 +3253,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
