--- a/K53_Sign_Test/road_sign_test9.html
+++ b/K53_Sign_Test/road_sign_test9.html
@@ -2899,6 +2899,8 @@ document.querySelectorAll(".score").forEach(el => {
     {
       document.getElementById(di).style.backgroundColor = "green";
       score++;
+			var signs_test9 = score; 
+		localStorage.setItem("signs_test9", signs_test9);
 
       left--;
       document.querySelectorAll(".score").forEach(el => {
@@ -3248,6 +3250,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
