--- a/K53_Sign_Test/road_sign_tests.html
+++ b/K53_Sign_Test/road_sign_tests.html
@@ -246,12 +246,49 @@
  	})
 
 
-	  const score = localStorage.getItem("score") || 0;
-	  if (score > 0){
+	  const signs_test1 = localStorage.getItem("signs_test1") || 0;
+	  if (signs_test1 > 29){
+		  document.getElementById("0").style.borderColor = "green";
+	  }
+	  const signs_test2 = localStorage.getItem("signs_test2") || 0;
+	  if (signs_test2 > 29){
+		  document.getElementById("0").style.borderColor = "green";
+	  }
+	  	  const signs_test3 = localStorage.getItem("signs_test3") || 0;
+	  if (signs_test3 > 29){
+		  document.getElementById("0").style.borderColor = "green";
+	  }
+	  	  const signs_test4 = localStorage.getItem("signs_test4") || 0;
+	  if (signs_test4 > 29){
+		  document.getElementById("0").style.borderColor = "green";
+	  }
+	  	  const signs_test5 = localStorage.getItem("signs_test5") || 0;
+	  if (signs_test5 > 29){
+		  document.getElementById("0").style.borderColor = "green";
+	  }
+	  	  const signs_test6 = localStorage.getItem("signs_test6") || 0;
+	  if (signs_test6 > 29){
+		  document.getElementById("0").style.borderColor = "green";
+	  }
+	  	  const signs_test7 = localStorage.getItem("signs_test7") || 0;
+	  if (signs_test7 > 29){
+		  document.getElementById("0").style.borderColor = "green";
+	  }
+	  	  const signs_test8 = localStorage.getItem("signs_test8") || 0;
+	  if (signs_test8 > 29){
+		  document.getElementById("0").style.borderColor = "green";
+	  }
+	  	  const signs_test9 = localStorage.getItem("signs_test9") || 0;
+	  if (signs_test9 > 29){
+		  document.getElementById("0").style.borderColor = "green";
+	  }
+	  	  const signs_test10 = localStorage.getItem("signs_test10") || 0;
+	  if (signs_test10 > 29){
 		  document.getElementById("0").style.borderColor = "green";
 	  }
 	  
  </script>
+
 
 
 
