--- a/home_images/home.html
+++ b/home_images/home.html
@@ -334,8 +334,9 @@ if ('serviceWorker' in navigator) {
     const percentage = Math.max(0, Math.min(score, 100));
 
     // Set width based on score
-    progress.style.width = percentage + "%";
+    progress.style.width = percentage + "px";
 </script>
+
 
 
 
