--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -1885,7 +1885,7 @@ const nicheAdvices = [
 ];
 
 document.querySelectorAll(".niches").forEach(el => {
-  const randomAdvice = nicheAdvices[Math.floor(Math.random() * nicheAdvices.length)];
+  const randomAdvice = "🚦Get the exact <span id="month">January</span> pdf Memo R100";
   el.textContent = randomAdvice;
 });
 </script>
@@ -1907,6 +1907,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
