--- a/K53_Controls_Test/heavy_vehicle_controls.html
+++ b/K53_Controls_Test/heavy_vehicle_controls.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -119,7 +119,7 @@
     <h3>Question 2 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -204,7 +204,7 @@
     <h3>Question 3 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -289,7 +289,7 @@
     <h3>Question 4 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -374,7 +374,7 @@
     <h3>Question 5 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -426,7 +426,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -502,7 +502,7 @@
     <h3>Question 6 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -587,7 +587,7 @@
     <h3>Question 7 of   15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -672,7 +672,7 @@
     <h3>Question 8 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -757,7 +757,7 @@
     <h3>Question 9 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -842,7 +842,7 @@
     <h3>Question 10 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -896,7 +896,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -965,7 +965,7 @@
     <h3>Question 11 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1050,7 +1050,7 @@
     <h3>Question 12 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1135,7 +1135,7 @@
     <h3>Question 13 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1220,7 +1220,7 @@
     <h3>Question 14 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1305,7 +1305,7 @@
     <h3>Question 15 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1357,7 +1357,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1907,6 +1907,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
