--- a/K53_Controls_Test/light_vehicle_controls.html
+++ b/K53_Controls_Test/light_vehicle_controls.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 14</h3>
   </div>
   <div class="time_score">
-<p class="niches"></p>
+<p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -120,7 +120,7 @@
     <h3>Question 2 of 14</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -205,7 +205,7 @@
     <h3>Question 3 of 14</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -290,7 +290,7 @@
     <h3>Question 4 of 14</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -375,7 +375,7 @@
     <h3>Question 5 of 14</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -430,7 +430,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -504,7 +504,7 @@
     <h3>Question 6 of 14</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -589,7 +589,7 @@
     <h3>Question 7 of   15</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -674,7 +674,7 @@
     <h3>Question 8 of 14</h3>
   </div>
   <div class="time_score">
-  <p class="niches"></p>
+  <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -759,7 +759,7 @@
     <h3>Question 9 of 14</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -844,7 +844,7 @@
     <h3>Question 10 of 14</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -898,7 +898,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -966,7 +966,7 @@
     <h3>Question 11 of 14</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1051,7 +1051,7 @@
     <h3>Question 12 of 14</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1136,7 +1136,7 @@
     <h3>Question 13 of 14</h3>
   </div>
   <div class="time_score">
- <p class="niches"></p>
+ <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1221,7 +1221,7 @@
     <h3>Question 14 of 14</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1268,13 +1268,13 @@
 
 
 </div>
-<p class="niches"></p>
+<p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 <div class="question" id="Ad2">
   <div class="question_number">
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1862,6 +1862,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
