--- a/K53_Controls_Test/motorcycle_controls.html
+++ b/K53_Controls_Test/motorcycle_controls.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -119,7 +119,7 @@
     <h3>Question 2 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -204,7 +204,7 @@
     <h3>Question 3 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -289,7 +289,7 @@
     <h3>Question 4 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -374,7 +374,7 @@
     <h3>Question 5 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -426,7 +426,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -500,7 +500,7 @@
     <h3>Question 6 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -585,7 +585,7 @@
     <h3>Question 7 of   15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -670,7 +670,7 @@
     <h3>Question 8 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -755,7 +755,7 @@
     <h3>Question 9 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -840,7 +840,7 @@
     <h3>Question 10 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -894,7 +894,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -962,7 +962,7 @@
     <h3>Question 11 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1047,7 +1047,7 @@
     <h3>Question 12 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1132,7 +1132,7 @@
     <h3>Question 13 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1217,7 +1217,7 @@
     <h3>Question 14 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1303,7 +1303,7 @@
     <h3>Question 15 of 15</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1355,7 +1355,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-   <p class="niches"></p>
+   <p>🚦Get the exact <span id="month">January</span> pdf Memo R100</p>
 
     <div class="container">
       <div id="branding">
@@ -1908,6 +1908,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
