--- a/K53_Book_Test/booka_lightvehicle_test.html
+++ b/K53_Book_Test/booka_lightvehicle_test.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -101,7 +101,7 @@
     <h3>Question 2 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -182,7 +182,7 @@
     <h3>Question 3 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -259,7 +259,7 @@
     <h3>Question 4 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -340,7 +340,7 @@
     <h3>Question 5 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -417,7 +417,7 @@
     <h3>Question 6 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -500,7 +500,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -577,7 +577,7 @@
     <h3>Question 8 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -659,7 +659,7 @@
     <h3>Question 9 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -736,7 +736,7 @@
     <h3>Question 10 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -785,7 +785,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -859,7 +859,7 @@
     <h3>Question 11 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -936,7 +936,7 @@
     <h3>Question 12 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1019,7 +1019,7 @@
     <h3>Question 13 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1096,7 +1096,7 @@
     <h3>Question 14 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1178,7 +1178,7 @@
     <h3>Question 15 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1224,7 +1224,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1317,7 +1317,7 @@
     <h3>Question 16 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1405,7 +1405,7 @@
     <h3>Question 17 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1481,7 +1481,7 @@
     <h3>Question 18 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1564,7 +1564,7 @@
     <h3>Question 19 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1640,7 +1640,7 @@
     <h3>Question 20 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1689,7 +1689,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1764,7 +1764,7 @@
     <h3>Question 21 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1841,7 +1841,7 @@
     <h3>Question 22 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1923,7 +1923,7 @@
     <h3>Question 23 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -1999,7 +1999,7 @@
     <h3>Question 24 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2081,7 +2081,7 @@
     <h3>Question 25 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2158,7 +2158,7 @@
     <h3>Question 26 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2241,7 +2241,7 @@
     <h3>Question 27 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2318,7 +2318,7 @@
     <h3>Question 28 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2401,7 +2401,7 @@
     <h3>Question 29 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2478,7 +2478,7 @@
     <h3>Question 30 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2527,7 +2527,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2625,7 +2625,7 @@
     <h3>Question 31 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2702,7 +2702,7 @@
     <h3>Question 32 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2783,7 +2783,7 @@
     <h3>Question 33 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2860,7 +2860,7 @@
     <h3>Question 34 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2943,7 +2943,7 @@
     <h3>Question 35 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -2996,7 +2996,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3063,7 +3063,7 @@
     <h3>Question 36 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3146,7 +3146,7 @@
     <h3>Question 37 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3230,7 +3230,7 @@
     <h3>Question 38 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3312,7 +3312,7 @@
     <h3>Question 39 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3389,7 +3389,7 @@
     <h3>Question 40 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3438,7 +3438,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3512,7 +3512,7 @@
     <h3>Question 41 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3589,7 +3589,7 @@
     <h3>Question 42 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3672,7 +3672,7 @@
     <h3>Question 43 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3749,7 +3749,7 @@
     <h3>Question 44 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3826,7 +3826,7 @@
     <h3>Question 45 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -3927,7 +3927,7 @@
     <h3>Question 46 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -4019,7 +4019,7 @@
     <h3>Question 47 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4095,7 +4095,7 @@
     <h3>Question 48 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4178,7 +4178,7 @@
     <h3>Question 49 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4254,7 +4254,7 @@
     <h3>Question 50 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4303,7 +4303,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4378,7 +4378,7 @@
     <h3>Question 51 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4455,7 +4455,7 @@
     <h3>Question 52 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4537,7 +4537,7 @@
     <h3>Question 53 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4613,7 +4613,7 @@
     <h3>Question 54 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4695,7 +4695,7 @@
     <h3>Question 55 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4741,7 +4741,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4809,7 +4809,7 @@
     <h3>Question 56 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4892,7 +4892,7 @@
     <h3>Question 57 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -4977,7 +4977,7 @@
     <h3>Question 58 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5063,7 +5063,7 @@
     <h3>Question 59 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5148,7 +5148,7 @@
     <h3>Question 60 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5200,7 +5200,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5274,7 +5274,7 @@
     <h3>Question 61 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5359,7 +5359,7 @@
     <h3>Question 62 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5444,7 +5444,7 @@
     <h3>Question 63 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -5529,7 +5529,7 @@
     <h3>Question 64 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="niches"></p>
+    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
 
     <div class="container">
       <div id="branding">
@@ -6096,5 +6096,6 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
